[tool.poetry]
name = "phantom_mask"
version = "0.1.0"
description = ""
authors = ["Eric Fang <ree0916tw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.43"
psycopg2 = "^2.9.5"
alembic = "^1.8.1"
click = "^8.1.3"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"
invoke = "^1.7.3"
mypy = "^0.990"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sqlalchemy-stubs = "^0.4"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | /loggin\.ini/
)/
'''

[tool.isort]
profile = "black"

[tool.pylint]
    [tool.pylint.MASTER]
    ignore-paths = [
        "^alembic/*$",
        "^app/models/*$",
        "^app/tests/.*$",
        "^app/tasks/.*$",
    ]

    [tool.pylint.messages_control]
    disable = [
        "invalid-name",
        "import-error",
        "no-member",
        "no-name-in-module",
        "consider-using-f-string",
        "too-few-public-methods",
        "too-many-lines",
        "too-many-branches",
        "too-many-statements",
        "too-many-return-statements",
        "too-many-locals",
        "too-many-ancestors",
        "too-many-arguments",
        "abstract-method",
        "arguments-renamed",
        "duplicate-code",
    ]
    extension-pkg-whitelist = [
        "mmap"
    ]

    [tool.pylint.format]
    max-line-length = 88

[tool.mypy]
plugins = "sqlmypy"
